--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.25",
+    "@types/validator": "^13.11.9",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "dotenv": "^16.4.5",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "express": "^4.18.3",
-    "mongodb": "^6.5.0"
+    "mongodb": "^6.5.0",
+    "validator": "^13.11.0"
   }
 }
